fixed the alignment of the icons in the side-nav

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -21,9 +21,10 @@ body {
     width:55px;
     height:100%;
     display:flex;
-    flex-flow:column;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    transition:0.4s;
 }
 
 /* Side Navigation Bar Open State */
@@ -31,22 +32,24 @@ body {
     width:80px;
 }
 
-/* Div that creates vertical spaces */
-.spacer {
-    height:55px;
+.sidenav-items {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 /* Each item in the sidenavigationbar */
 .sidenav-item {
-    padding-left:12px;
-    margin-bottom:35px;
 }
 
 /* Power button */
 #power {
-    padding-left:12px;
     position: absolute;
     bottom:5px;
+
 }
 
 /* Title bar container */
@@ -96,14 +99,15 @@ body {
     height:100%;
     position:relative;
     padding-top:30px;
-    overflow-y: scroll;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 /* Container for dragging and drop files */
 #dragarea {
-    margin:auto;
-    margin-bottom:50px;
-    width:65%;
+    width:48%;
     height:65%;
     background:var(--primaryAccent);
     min-width: 350px;
@@ -217,6 +221,12 @@ body {
 /* Blurs on hover */
 #sThumbnail:hover #uploadedImage {
     filter: blur(2px);
+}
+
+.options_container {
+    width: 48%;
+    height: 65%;
+    background-color: var(--primaryAccent);
 }
 
 .options {
